add record EPs status into MongoDB

--- a/server/common/nosql/mongo-dao/src/test/resources/mongo_test.properties
+++ b/server/common/nosql/mongo-dao/src/test/resources/mongo_test.properties
@@ -15,7 +15,7 @@ socket_timeout=0
 socket_keepalive=false
 
 # list of mongodb nodes, possible to use multiply servers
-servers=localhost:27717
+servers=104.224.137.68:27017
 
 # mongodb database name
 db_name=kaa
