--- a/server/node/pom.xml
+++ b/server/node/pom.xml
@@ -453,6 +453,11 @@
             <artifactId>gson</artifactId>
             <version>2.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.1.31</version>
+        </dependency>
     </dependencies>
 
     <build>
